Rethought on functions
I think functions based on pipes makes a simpler feature, as well as allows for use in interactive sessions, resembling Bourne-compatible Shells better. Unlike the goto-based version, functions may only be called if they were previously declared (i.e: no forward jumps), making a similar behavior to Bourne-compatible Shells.

This version relies on a tree derived from variables and aliases. Unlike to aliases and variables, the tree is restrictive. Once a function is declared, may not be redeclared or undeclared.

I was afraid this wouldn't work out for some operations, such as loops and gotos, because pipes cannot rewind. Fortunately, I was wrong, and the fact these operations are possible from interactive sessions, from a terminal, makes the assumption just as wrong, though I'm clueless as to how rewinding is possible on unsupported sources.

--- a/tcsh.man.in
+++ b/tcsh.man.in
@@ -5424,12 +5424,14 @@ messages are verbose.
 .It Ic end
 .It Ic endif
 .It Ic endsw
+.It Ic return
 See the description of the
 .Ic foreach ,
 .Ic if ,
 .Ic switch ,
+.Ic while ,
 and
-.Ic while
+.Ic return
 statements below.
 .
 .El
@@ -5521,29 +5523,33 @@ the loop are executed.
 If you make a mistake typing in a
 loop at the terminal you can rub it out.
 .
-.It Ic function Ar label Xo
-.Op Ar arg
-\&... (+)
+.It Ic function No (+)
+.It Ic function Ar name No (+)
+.It Ic \&...
+.It Ic return
+.It Ic function Ar name Xo
+.Op Ar arg No ...
+(+)
 .Xc
-.Ar label
-is a
-.Ic goto
-label. The shell recurses the current script,
-searches for and continues execution after a line of the form
-.Dl Ar label Ns No \&:
-.Ar arg
-is a list of arguments to be passed to
-.Ic argv Ns No \&.
-Use outside a label is labeled
-.Ar main Ns No \&.
-It's an error
-.Sq Ar label Ns No \&:
-not contain an ending
-.Ic exit Ns No \&.
-It's an error
-.Ar main
-not contain an ending
-.Ic exit Ns No \&.
+The first form of the command prints the value of all shell functions.
+.Pp
+The second form declares a function
+.Ar name Ns No .
+A declaration ends when a
+.Ic return
+is matched. (Both
+.Ic function
+and
+.Ic return
+must appear alone on separate lines.)
+May not be declared otherwise, and declared
+functions may not be redeclared or undeclared.
+.Pp
+The third form calls a function
+.Ar name Ns No ,
+optionally, preceded by
+.Ar arg Ns No ,
+which is a list of arguments to be passed.
 .
 .El
 .Bl -tag -width 6n
